Added left padding for easier readability

--- a/idle.html
+++ b/idle.html
@@ -31,7 +31,7 @@
 <body>
 	<div id="new_content">
 		<div id="info_panel">
-			<h3 id="statsHeader">STATISTICS:</h3>
+			<h3 id="statsHeader" style="padding-left: 2px;">STATISTICS:</h3>
 			<div class="player_info_group">
 				<div id="player_info_level">Level: 1</div>
 				<div id="player_info_xp">XP: 0%</div>
@@ -68,7 +68,7 @@
 				</div>
 			</div>
 
-			<h3 id="task_info">CURRENT TASK: none</h3>
+			<h3 id="task_info" style="padding-left: 2px;">CURRENT TASK: none</h3>
 
 			<!-- STARTING PLACE -->
 			<div class="task_window" id="empty_window">
@@ -234,9 +234,9 @@
 					<span class="equipment_slot_info" style="width: 10%;" id="equipment_weapon_power">0</span>
 					<span class="equipment_slot_info" style="width: 70%;" id="equipment_weapon_name">Fists</span>
 				</div>
-				<div>Explanation about stats and what they do:</div>
-				<div>Weapon power is added to your attack 1:1 :></div>
-				<div>Armour power reduces damage received at half of it's power (rounded down). (still min dmg received is 1)</div>
+				<div style="padding-left: 2px;">Explanation about stats and what they do:</div>
+				<div style="padding-left: 2px;">Weapon power is added to your attack 1:1 :></div>
+				<div style="padding-left: 2px;">Armour power reduces damage received at half of it's power (rounded down). (still min dmg received is 1)</div>
 			</div>
 
 			<div id = "control_buttons">
