Skeletal for save system. Currently not in use.

--- a/idle.html
+++ b/idle.html
@@ -12,6 +12,8 @@
 
 	<link rel="stylesheet" href="idle.css?v=17">
 	
+	<script src="saveSystem.js?v=1"></script>
+
 	<script src="enums.js?v=17"></script>
 	<script src="item.js?v=17"></script>
 	<script src="player.js?v=17"></script>
