--- a/idle.html
+++ b/idle.html
@@ -187,28 +187,28 @@
 
 			<!-- EQUIPMENT -->
 			<div class = "task_window" id="equipment_window" style="display: none;">
-				<div id="equipment_helmet" style="height: 10%;display: flex;">
-					<span class="equipment_slot_info" style="width: 20%;">Helmet: </span>
+				<div class="equipment_slot" id="equipment_helmet">
+					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Helmet: </span>
 					<span class="equipment_slot_info" style="width: 10%;" id="equipment_helmet_power">0</span>
 					<span class="equipment_slot_info" style="width: 70%;" id="equipment_helmet_name">None</span>
 				</div>
-				<div class="equipment_slot" id="equipment_body_armour" style="height: 10%;display: flex;">
-					<span class="equipment_slot_info" style="width: 20%;">Body Armour: </span>
+				<div class="equipment_slot" id="equipment_body_armour">
+					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Body Armour: </span>
 					<span class="equipment_slot_info" style="width: 10%;" id="equipment_body_armour_power">0</span>
 					<span class="equipment_slot_info" style="width: 70%;" id="equipment_body_armour_name">None</span>
 				</div>
-				<div class="equipment_slot" id="equipment_gloves" style="height: 10%;display: flex;">
-					<span class="equipment_slot_info" style="width: 20%;">Gloves: </span>
+				<div class="equipment_slot" id="equipment_gloves">
+					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Gloves: </span>
 					<span class="equipment_slot_info" style="width: 10%;" id="equipment_gloves_power">0</span>
 					<span class="equipment_slot_info" style="width: 70%;" id="equipment_gloves_name">None</span>
 				</div>
-				<div class="equipment_slot" id="equipment_boots" style="height: 10%;display: flex;">
-					<span class="equipment_slot_info" style="width: 20%;">Boots: </span>
+				<div class="equipment_slot" id="equipment_boots">
+					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Boots: </span>
 					<span class="equipment_slot_info" style="width: 10%;" id="equipment_boots_power">0</span>
 					<span class="equipment_slot_info" style="width: 70%;" id="equipment_boots_name">None</span>
 				</div>
-				<div class="equipment_slot" id="equipment_weapon" style="height: 10%;display: flex;">
-					<span class="equipment_slot_info" style="width: 20%;">Weapon: </span>
+				<div class="equipment_slot" id="equipment_weapon">
+					<span class="equipment_slot_info" style="width: 20%; border-left: none;">Weapon: </span>
 					<span class="equipment_slot_info" style="width: 10%;" id="equipment_weapon_power">0</span>
 					<span class="equipment_slot_info" style="width: 70%;" id="equipment_weapon_name">Fists</span>
 				</div>
