--- a/idle.html
+++ b/idle.html
@@ -10,22 +10,22 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-	<link rel="stylesheet" href="idle.css?v=20">
+	<link rel="stylesheet" href="idle.css?v=21">
 	
 	<script src="saveSystem.js?v=1"></script>
 
-	<script src="enums.js?v=20"></script>
-	<script src="item.js?v=20"></script>
-	<script src="player.js?v=20"></script>
-	<script src="enemies.js?v=20"></script>
-	<script src="battleZones.js?v=20"></script>
+	<script src="enums.js?v=21"></script>
+	<script src="item.js?v=21"></script>
+	<script src="player.js?v=21"></script>
+	<script src="enemies.js?v=21"></script>
+	<script src="battleZones.js?v=21"></script>
 
-	<script src="battle.js?v=20"></script>
-	<script src="healing.js?v=20"></script>
-	<script src="training.js?v=20"></script>
-	<script src="questing.js?v=20"></script>
+	<script src="battle.js?v=21"></script>
+	<script src="healing.js?v=21"></script>
+	<script src="training.js?v=21"></script>
+	<script src="questing.js?v=21"></script>
 
-	<script src="idle.js?v=20"></script>
+	<script src="idle.js?v=21"></script>
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 	</style>
@@ -136,7 +136,7 @@
 					<div>Current Quest</div>
 					<br>
 					<br>
-					<div id="questing_flavour_text" style="width: 95%; display: flex; justify-content: center;">You are from NPC to NPC as a messenger. Such challenge for a hero!</div>
+					<div id="questing_flavour_text" style="width: 95%; display: flex; justify-content: center;"></div>
 					<div id="questing_progress_bar">
 						<div id="questing_progress_bar_inside"></div>
 					</div>
