Preparation for shop

--- a/idle.html
+++ b/idle.html
@@ -252,12 +252,18 @@
 				<div style="padding-left: 2px;">Armour power reduces damage received at half of it's power (rounded down). (still min dmg received is 1)</div>
 			</div>
 
+			<!-- SHOP -->
+			<div class = "task_window" id="shop_window" style="display: none;">
+				
+			</div>
+
 			<div id = "control_buttons">
 				<button id="battleButton">BATTLE</button>
 				<button id="questingButton">QUESTS</button>
 				<button id="recoverHealthButton">HEAL</button>
 				<button id="trainingButton">TRAIN</button>
 				<button id="equipmentButton">EQ</button>
+				<button id="shopButton">SHOP</button>
 			</div>
 		</div>
 	</div>
