--- a/idle.html
+++ b/idle.html
@@ -25,6 +25,7 @@
 	<script src="healing.js?v=24"></script>
 	<script src="training.js?v=24"></script>
 	<script src="questing.js?v=24"></script>
+	<script src="shop.js?v=24"></script>
 
 	<script src="idle.js?v=24"></script>
 	<style>
@@ -254,7 +255,11 @@
 
 			<!-- SHOP -->
 			<div class = "task_window" id="shop_window" style="display: none;">
-				
+				<span style="width: 30%; height: 100%;" id="potion_seller"></span>
+				<span style="width: 5%;"></span>
+				<span style="width: 30%; height: 100%;" id="church_buffer"></span>
+				<span style="width: 5%;"></span>
+				<span style="width: 30%; height: 100%;" id="tavern"></span>
 			</div>
 
 			<div id = "control_buttons">
