--- a/idle.html
+++ b/idle.html
@@ -52,6 +52,13 @@
 					Health:
 					<span id="player_info_health"></span>
 				</div>
+				<div class="player_info_element" id="HP_Potions">
+					HP potions:
+					<span id="player_info_health_potions"></span>
+				</div>
+			</div>
+			<br>
+			<div class="player_info_group">
 				<div class="player_info_element" id="MANA">
 					Mana:
 					<span id="player_info_mana"></span>
@@ -296,7 +303,7 @@
 						</span>
 						<span style="width: 25%; display: flex; justify-content: center;">
 							<div>
-								<button id="buyItemButton" itemId="0">BUY</button>
+								<button class="buyItemButton" itemId="0">BUY</button>
 							</div>
 						</span>
 					</div>
