--- a/idle.html
+++ b/idle.html
@@ -23,6 +23,7 @@
 	<script src="player.js?v=24"></script>
 	<script src="enemies.js?v=24"></script>
 	<script src="battleZones.js?v=24"></script>
+	<script src="buffs.js?v=24"></script>
 
 	<script src="battle.js?v=24"></script>
 	<script src="healing.js?v=24"></script>
