--- a/idle.html
+++ b/idle.html
@@ -311,8 +311,58 @@
 				</div>
 			</div>
 			<!-- CHURCH (SHOP) -->
-			<div class="task_window" id="church_window" style="display: none;">
-				
+			<div class="task_window" id="church_window" style="display: none; justify-content: center;">
+				<div style="width: 80%; display: flex; flex-direction: column;	border-left:#000 solid 1px; border-right:#000 solid 1px;">
+					<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+						<span style="width: 25%; display: flex; justify-content: center;">
+							NAME
+						</span>
+						<span style="width: 50%; display: flex; justify-content: center;">
+							DESCRIPTION
+						</span>
+						<span style="width: 15%; display: flex; justify-content: center;">
+							PRICE
+						</span>
+						<span style="width: 10%; display: flex; justify-content: center;">
+							<div>
+							</div>
+						</span>
+					</div>
+
+					<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+						<span style="width: 25%; display: flex; justify-content: center;">
+							+ 10 DAMAGE BLESSING
+						</span>
+						<span style="width: 50%; display: flex; justify-content: center;">
+							Applies additional damage. 60 min duration.
+						</span>
+						<span style="width: 15%; display: flex; justify-content: center;">
+							500
+						</span>
+						<span style="width: 10%; display: flex; justify-content: center;">
+							<div>
+								<button class="buyBuffButton" buffId="churchDamage" cost="1">BUY</button>
+							</div>
+						</span>
+					</div>
+					
+					<div style="height: 5%; display: flex; align-items: center; border-bottom:#000 solid 1px;">
+						<span style="width: 25%; display: flex; justify-content: center;">
+							+ 10 DEFENSE BLESSING
+						</span>
+						<span style="width: 50%; display: flex; justify-content: center;">
+							Reduces damage by flat rate. 60 min duration.
+						</span>
+						<span style="width: 15%; display: flex; justify-content: center;">
+							500
+						</span>
+						<span style="width: 10%; display: flex; justify-content: center;">
+							<div>
+								<button class="buyBuffButton" buffId="churchDefense" cost="500">BUY</button>
+							</div>
+						</span>
+					</div>
+				</div>
 			</div>
 			<!-- TAVERN (SHOP) -->
 			<div class="task_window" id="tavern_window" style="display: none;">
