Helth is red, Weapons drop more often

--- a/idle.html
+++ b/idle.html
@@ -50,11 +50,11 @@
 			</div>
 			<br>
 			<div class="player_info_group">
-				<div class="player_info_element" id="HP">
+				<div class="player_info_element" id="HP" style="background: linear-gradient(90deg, rgb(151, 58, 58), rgb(153, 100, 100)) 0% 0% / 100% 100% no-repeat">
 					Health:
 					<span id="player_info_health"></span>
 				</div>
-				<div class="player_info_element" id="HP_Potions">
+				<div class="player_info_element" id="HP_Potions" style="background: linear-gradient(90deg, rgb(151, 58, 58), rgb(153, 100, 100)) 0% 0% / 100% 100% no-repeat">
 					HP potions:
 					<span id="player_info_health_potions"></span>
 				</div>
