Changes in: Tick, Battle and smoothness
- Changed progress bar tick to happen every 50 ms rather than 10ms as 10ms was way too often for lower spec hardware.
- Added health bars in battle window as preparations for major changes in battle window.
- Added transition durations to (I hope) all progress bars for overall feeling of smoothness and completion.
- Upped version on website

--- a/idle.html
+++ b/idle.html
@@ -13,26 +13,26 @@
 		@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 	</style>
 
-	<link rel="stylesheet" href="idle.css?v=27">
+	<link rel="stylesheet" href="idle.css?v=28">
 	
-	<script src="uiFunctions.js?v=27"></script>
+	<script src="uiFunctions.js?v=28"></script>
 
-	<script src="enums.js?v=27"></script>
-	<script src="item.js?v=27"></script>
-	<script src="player.js?v=27"></script>
-	<script src="enemies.js?v=27"></script>
-	<script src="battleZones.js?v=27"></script>
-	<script src="buffs.js?v=27"></script>
+	<script src="enums.js?v=28"></script>
+	<script src="item.js?v=28"></script>
+	<script src="player.js?v=28"></script>
+	<script src="enemies.js?v=28"></script>
+	<script src="battleZones.js?v=28"></script>
+	<script src="buffs.js?v=28"></script>
 	
 	<script src="saveSystem.js?v=1"></script>
 
-	<script src="battle.js?v=27"></script>
-	<script src="healing.js?v=27"></script>
-	<script src="training.js?v=27"></script>
-	<script src="questing.js?v=27"></script>
-	<script src="shops.js?v=27"></script>
+	<script src="battle.js?v=28"></script>
+	<script src="healing.js?v=28"></script>
+	<script src="training.js?v=28"></script>
+	<script src="questing.js?v=28"></script>
+	<script src="shops.js?v=28"></script>
 
-	<script src="idle.js?v=27"></script>
+	<script src="idle.js?v=28"></script>
 </head>
 <body>
 	<div id="new_content">
@@ -132,16 +132,30 @@
 					</div>
 
 					<div id="battle_data">
-						<span id = "player_battle_data">
-							<div class="help" title="It's You. Do NOT kill it.">
+
+						<span id = "player_battle_data" class="help" title="It's You. Do NOT kill it." >
+							<div class="battle_data">
 								Player
-								<div id="player_battle_health">HP: 100%</div>
+								
+								<div class="battle_health_bar" id="battle_player_health_bar">
+									<div class="battle_health_bar_inside" id="battle_player_health_bar_inside">
+										<div id="player_battle_health" style="padding-top: 2px;">HP: 100%</div>
+									</div>
+								</div>
 							</div>
 						</span>
+
 						<span id = "monster_battle_data">
-							<div class ="help" title="Monster name. Kill it." id = "battle_window_monster_data">
-								<div id="monster_battle_name">Rat</div>
-								<div id="monster_battle_health">HP: 100%</div>
+							<div id ="battle_window_monster_data" class ="help" title="Monster name. Kill it." >
+								<div class="battle_data">
+									<div id="monster_battle_name">Rat</div>
+									
+									<div class="battle_health_bar" id="battle_monster_health_bar">
+										<div class="battle_health_bar_inside" id="battle_monster_health_bar_inside">
+											<div id="monster_battle_health" style="padding-top: 2px;">HP: 100%</div>
+										</div>
+									</div>
+								</div>
 							</div>
 							<div id = "battle_looking_for_enemy">Looking for enemy.</div>
 						</span>
