Critical hits on monsters
- Added indicator of crit on monster

--- a/idle.html
+++ b/idle.html
@@ -140,7 +140,7 @@
 						<span id = "player_battle_data" class="help" title="It's You. Do NOT kill it." >
 							<div class="battle_data">
 								<div>Player</div>
-								<br>
+								<div id="battle_player_crit" style="opacity: 0;">CRIT</div>
 								<div class="battle_health_bar" id="battle_player_health_bar">
 									<div class="battle_health_bar_inside" id="battle_player_health_bar_inside">
 										<div id="player_battle_health" style="padding-top: 2px;">HP: 100%</div>
@@ -155,7 +155,7 @@
 							<div id ="battle_window_monster_data" class ="help" title="Monster name. Kill it." >
 								<div class="battle_data">
 									<div id="monster_battle_name">Rat</div>
-									<br>
+									<div id="battle_monster_crit" style="opacity: 0; color: red">CRIT</div>
 									<div class="battle_health_bar" id="battle_monster_health_bar">
 										<div class="battle_health_bar_inside" id="battle_monster_health_bar_inside">
 											<div id="monster_battle_health" style="padding-top: 2px;">HP: 100%</div>
