--- a/idle.html
+++ b/idle.html
@@ -138,7 +138,7 @@
 					<!-- Actual battle -->
 					<div style="display: flex; width: 100%; height: 85%; align-items: center;">
 						<span id = "player_battle_data" class="help" title="It's You. Do NOT kill it." >
-							<div class="battle_data">
+							<div class="battle_data" style="justify-content:space-around;">
 								<div>Player</div>
 								<div id="battle_player_crit" style="opacity: 0;">CRIT</div>
 								<div class="battle_health_bar" id="battle_player_health_bar">
@@ -146,7 +146,7 @@
 										<div id="player_battle_health" style="padding-top: 2px;">HP: 100%</div>
 									</div>
 								</div>
-								<br>
+								<div style="opacity: 0;">.</div>
 								<div id="battle_player_crit_chance"></div>
 							</div>
 						</span>
@@ -161,7 +161,7 @@
 											<div id="monster_battle_health" style="padding-top: 2px;">HP: 100%</div>
 										</div>
 									</div>
-									<br>
+									<div style="opacity: 0;">.</div>
 									<div id="battle_monster_level"></div>
 								</div>
 							</div>
