--- a/idle.html
+++ b/idle.html
@@ -132,15 +132,25 @@
 				<div id="battle_window_battle">
 
 					<!-- Info about drops -->
-					<div style="display: flex; width: 100%; height: 15%;">
-						<div id="battle_window_drops"></div>
+					<div id="battle_window_drops" style="opacity: 0;display: flex;width: 100%;height: 15%;flex-direction: column;">
+						<div style="height: 33%;width: 100%;display: flex;justify-content: center;align-items: center;">! NEW ITEM !</div>
+						<div style="height: 67%; width: 100%; display: flex;">
+							<span style="width: 50%; height: 100%;">
+								<div id="battle_window_drops_name" style="width: 100%; height: 50%; display: flex; justify-content: center;"></div>
+								<div id="battle_window_drops_rarity" style="width: 100%; height: 50%; display: flex; justify-content: center;"></div>
+							</span>
+							<span style="width: 50%; height: 100%;">
+								<div id="battle_window_drops_slot" style="width: 100%; height: 50%; display: flex; justify-content: center;"></div>
+								<div id="battle_window_drops_power" style="width: 100%; height: 50%; display: flex; justify-content: center;"></div>
+							</span>
+						</div>
 					</div>
 
 					<div style="height: 15%;"></div>
 
 					<!-- Actual battle -->
 					<div style="display: flex; width: 100%; height: 50%; align-items: flex-start;">
-						<span id = "player_battle_data" class="help" title="It's You. Do NOT kill it." >
+						<span id="player_battle_data" class="help" title="It's You. Do NOT kill it.">
 							<div class="battle_data" style="justify-content:space-around;">
 								<div>Player</div>
 								<div id="battle_player_crit" style="opacity: 0;">CRIT</div>
